chore: Remove models_cache from git tracking to reduce repo size
- Added models_cache/ to .gitignore
- Removed 309 tracked model cache files (6.5GB)
- This will allow Railway deployment to succeed

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ coverage.xml
 .mypy_cache
 .pytest_cache
 .hypothesis
+
+# ML Models cache (large files)
+models_cache/
+
+# Frontend build artifacts
+frontend/node_modules/
+frontend/.next/
+frontend/out/
