feat: Add Cerebras-powered article summary feature with dual summary generation
- Implement article summary feature using Cerebras AI API (free tier)
- Generate both short (3-5 sentences) and expanded (8-12 sentences) summaries in single API call
- Add database schema for storing summaries (ai_summary, ai_summary_expanded, metadata)
- Create database migration script with upgrade/downgrade support
- Implement cache-first strategy for optimal performance
- Add analytics tracking for usage monitoring
- Create ArticleSummaryModal component for displaying summaries
- Add double-click interaction on network view paper nodes
- Fix Next.js 15 compatibility (async params)
- Support both plain text and markdown response formats from Cerebras
- Add comprehensive test suite and documentation

Backend changes:
- Add article_summary and summary_analytics routers
- Update database.py with new columns
- Fix import paths for backend routers

Frontend changes:
- Create summary API route with Cerebras integration
- Add ArticleSummaryModal component
- Update NetworkView with double-click handler
- Support dual summary display

Configuration:
- Add CEREBRAS_API_KEY to environment variables
- Update .env.railway template

Cost: /bin/bash/month (Cerebras free tier: 1M tokens/day)
Performance: <300ms cache hit, ~2-3s generation

--- a/.env.railway
+++ b/.env.railway
@@ -6,6 +6,7 @@ SUPABASE_DATABASE_URL=postgresql://postgres:Ismene!1993@aws-0-us-west-1.pooler.s
 
 # AI Services
 OPENAI_API_KEY=your_openai_api_key_here
+CEREBRAS_API_KEY=csk-mmt22ed2rdrc9tehyet2x48xmy94mt3p5492rhpepwe3pddx
 PINECONE_API_KEY=your_pinecone_key_here
 PINECONE_INDEX=your_pinecone_index_here
 PINECONE_HOST=your_pinecone_host_here
