--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.33.0",
     "@heroicons/react": "^2.2.0",
+    "@tiptap/extension-text-style": "^3.10.4",
+    "@tiptap/extension-underline": "^3.10.4",
+    "@tiptap/react": "^3.10.4",
+    "@tiptap/starter-kit": "^3.10.4",
     "@xyflow/react": "^12.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
