--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "@tiptap/extension-underline": "^3.10.4",
     "@tiptap/react": "^3.10.4",
     "@tiptap/starter-kit": "^3.10.4",
-    "@xyflow/react": "^12.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
@@ -24,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-pdf": "^10.2.0",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
