--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,17 @@
     "@tiptap/extension-underline": "^3.10.4",
     "@tiptap/react": "^3.10.4",
     "@tiptap/starter-kit": "^3.10.4",
+    "@types/cytoscape": "^3.21.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cytoscape": "^3.33.1",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
     "pdfjs-dist": "^5.4.296",
     "react": "19.1.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "19.1.0",
     "react-pdf": "^10.2.0",
-    "reactflow": "^11.11.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
