🚨 CRITICAL FIX: Add PDF Full Text Extraction for Protocol & Triage
Week 19-20: Critical Bug Fix

## 🔍 Root Cause
Protocol extraction and AI triage were using ONLY abstracts, not full PDF text!
This caused empty protocols and poor triage accuracy.

## ✅ Changes

### 1. Database Migration (006)
- Add pdf_text field to articles table
- Add pdf_extracted_at, pdf_extraction_method, pdf_url, pdf_source
- Add full-text search index for PDF content

### 2. New Service: PDFTextExtractor
- backend/app/services/pdf_text_extractor.py
- Downloads PDFs using existing pdf_endpoints infrastructure
- Extracts text using PyPDF2 (with pdfplumber fallback)
- Caches extracted text in database
- Extracts methods section intelligently

### 3. Updated Protocol Extraction
- backend/app/services/protocol_extractor_service.py
- Now uses full PDF text when available
- Falls back to abstract if PDF not available
- Shows content source in prompts

### 4. Updated AI Triage
- backend/app/services/ai_triage_service.py
- Now uses full PDF text for relevance analysis
- Better accuracy with complete paper content
- Truncates to 6000 chars to avoid token limits

### 5. Dependencies
- Added PyPDF2>=3.0.0 to requirements.txt
- Added pdfplumber>=0.10.0 as fallback

## 📊 Expected Impact
- ✅ Complete protocols with all materials and steps
- ✅ High confidence scores (80-95%)
- ✅ Accurate triage based on full paper content
- ✅ Better relevance scoring

## 🧪 Testing
Test with PMID 35650602 (user-specified example)

## 📚 Documentation
- CRITICAL_PDF_TEXT_EXTRACTION_FIX.md - Complete analysis
- Migration 006 with rollback instructions
- Inline code documentation

Fixes: Empty protocols, poor triage accuracy, missing methods details

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ httpx>=0.25.2
 
 # Document processing - Python 3.12 compatible
 pdfminer.six>=20231228
+PyPDF2>=3.0.0  # PDF text extraction for protocol extraction
+pdfplumber>=0.10.0  # Fallback PDF extraction
 
 # Utilities - Python 3.12 compatible
 jsonschema>=4.20.0
