Week 24: Fix Experiment Planner Regression & PDF Figure Extraction
ISSUE 1: EXPERIMENT PLAN REGRESSION
- CoreExperimentAgent now generates ALL 15 fields (was only 8)
- Enhanced prompt with rich contextual details (previous results, decisions)
- Removed hardcoded empty arrays from orchestrator
- Added detailed examples and instructions for each field
- Multi-agent plans now RICHER than legacy system

ISSUE 2: PDF FIGURE EXTRACTION
- Rewrote _extract_figures() with PIL/Pillow for proper image processing
- Decode raw image data and re-encode as PNG
- Create proper data URI format for web display
- Resize large images (max 800px width)
- Handle all color spaces (RGB, Grayscale, CMYK)
- Added Pillow>=10.0.0 to requirements.txt

Files Modified:
- backend/app/services/agents/core_experiment_agent.py (190 → 292 lines)
- backend/app/services/agents/orchestrator.py (updated to use agent output)
- backend/app/services/pdf_text_extractor.py (482 → 530 lines)
- requirements.txt (added Pillow)
- WEEK_24_EXPERIMENT_PLANNER_FIX.md (comprehensive documentation)

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ httpx>=0.25.2
 pdfminer.six>=20231228
 PyPDF2>=3.0.0  # PDF text extraction for protocol extraction
 pdfplumber>=0.10.0  # Fallback PDF extraction
+Pillow>=10.0.0  # Week 24: Image processing for PDF figure extraction
 
 # Utilities - Python 3.12 compatible
 jsonschema>=4.20.0
