feat: Complete Erythos UI/UX restructuring (Phases 0-5)
Phase 0: Foundation
- Feature flags context and API endpoint
- Erythos shared components (Card, Button, Tabs, Header, SearchBar, etc.)
- Database migration for phase tracking

Phase 1: Home Page Restructuring
- ErythosHomePage with workflow cards and recent activity
- Erythos theme CSS in globals.css
- Gradient utilities

Phase 2: Collections Page Restructuring
- ErythosCollectionCard with gradient icons
- ErythosCollectionsPage with flat list (no project grouping)

Phase 3: Discover Page (Most Complex)
- 3-tab structure: Smart Inbox, Explore, All Papers
- AI triage components with keyboard shortcuts
- Triaged paper cards with batch mode

Phase 4: Project Workspace
- 7 flat tabs (no sub-tabs): Overview, Questions, Collections, Lab Progress, Decisions, Team, Reports
- ErythosProjectWorkspace with stats grid
- Simplified project header

Phase 5: Lab Page (Global)
- New /lab route with feature flag
- 3 tabs: Protocols, Experiments, Data Management
- Global view across all projects with project filter

All builds passing (79/79 pages generated)

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,12 @@ UNPAYWALL_EMAIL=your_email@example.com
 
 # CORS
 ALLOW_ORIGIN_REGEX=.*
+
+# Erythos Feature Flags (Phase 0)
+ENABLE_NEW_HOME_PAGE=false
+ENABLE_NEW_DISCOVER_PAGE=false
+ENABLE_NEW_COLLECTIONS_PAGE=false
+ENABLE_NEW_PROJECT_WORKSPACE=false
+ENABLE_NEW_LAB_PAGE=false
+ENABLE_GLOBAL_TRIAGE=false
+ENABLE_ERYTHOS_THEME=false
