--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@clerk/nextjs": "^6.33.0",
     "@heroicons/react": "^2.2.0",
+    "@tiptap/extension-heading": "^3.11.1",
+    "@tiptap/extension-highlight": "^3.11.1",
+    "@tiptap/extension-link": "^3.11.1",
+    "@tiptap/extension-placeholder": "^3.11.1",
+    "@tiptap/extension-text-align": "^3.11.1",
     "@tiptap/extension-text-style": "^3.10.4",
-    "@tiptap/extension-underline": "^3.10.4",
-    "@tiptap/react": "^3.10.4",
-    "@tiptap/starter-kit": "^3.10.4",
+    "@tiptap/extension-underline": "^3.11.1",
+    "@tiptap/pm": "^3.11.1",
+    "@tiptap/react": "^3.11.1",
+    "@tiptap/starter-kit": "^3.11.1",
     "@types/cytoscape": "^3.21.9",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
